--- a/packages/browser/package.json
+++ b/packages/browser/package.json
@@ -18,8 +18,7 @@
   "preconstruct": {
     "entrypoints": [
       "index.ts",
-      "adapters/pm.ts",
-      "rpc/index.ts"
+      "adapters/pm.ts"
     ]
   },
   "scripts": {
@@ -39,29 +38,10 @@
   "publishConfig": {
     "access": "public"
   },
+  "peerDependencies": {
+    "@trpc/server": "^9.12.0"
+  },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.0.0",
-    "@testing-library/user-event": "^14.1.0",
-    "@types/express": "^4.17.12",
-    "@types/hash-sum": "^1.0.0",
-    "@types/ws": "^8.2.0",
-    "abort-controller": "^3.0.0",
-    "devalue": "^2.0.1",
-    "express": "^4.17.1",
-    "fastify": "^3.27.1",
-    "fastify-plugin": "^3.0.1",
-    "fastify-websocket": "^4.0.0",
-    "hash-sum": "^2.0.0",
-    "jest": "^27.1.0",
-    "konn": "^0.7.0",
-    "myzod": "^1.3.1",
-    "next": "12.1.4",
-    "node-fetch": "^2.6.1",
-    "superstruct": "^0.15.2",
-    "typescript": "4.4.4",
-    "ws": "^8.0.0",
-    "yup": "^0.32.8",
-    "zod": "^3.0.0"
+    "@trpc/server": "^9.22.0"
   }
 }
